; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/ti-vpe/extr_vpdma.c_vpdma_hwlist_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/ti-vpe/extr_vpdma.c_vpdma_hwlist_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vpdma_data = type { i32*, i32, i8** }

@VPDMA_MAX_NUM_LIST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vpdma_hwlist_alloc(%struct.vpdma_data* %0, i8* %1) #0 {
  %3 = alloca %struct.vpdma_data*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.vpdma_data* %0, %struct.vpdma_data** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 -1, i32* %6, align 4
  %8 = load %struct.vpdma_data*, %struct.vpdma_data** %3, align 8
  %9 = getelementptr inbounds %struct.vpdma_data, %struct.vpdma_data* %8, i32 0, i32 1
  %10 = load i64, i64* %7, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  store i32 0, i32* %5, align 4
  br label %12

12:                                               ; preds = %28, %2
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @VPDMA_MAX_NUM_LIST, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %25

16:                                               ; preds = %12
  %17 = load %struct.vpdma_data*, %struct.vpdma_data** %3, align 8
  %18 = getelementptr inbounds %struct.vpdma_data, %struct.vpdma_data* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = load i32, i32* %5, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = icmp eq i32 %23, 1
  br label %25

25:                                               ; preds = %16, %12
  %26 = phi i1 [ false, %12 ], [ %24, %16 ]
  br i1 %26, label %27, label %31

27:                                               ; preds = %25
  br label %28

28:                                               ; preds = %27
  %29 = load i32, i32* %5, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %5, align 4
  br label %12

31:                                               ; preds = %25
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* @VPDMA_MAX_NUM_LIST, align 4
  %34 = icmp slt i32 %32, %33
  br i1 %34, label %35, label %50

35:                                               ; preds = %31
  %36 = load i32, i32* %5, align 4
  store i32 %36, i32* %6, align 4
  %37 = load %struct.vpdma_data*, %struct.vpdma_data** %3, align 8
  %38 = getelementptr inbounds %struct.vpdma_data, %struct.vpdma_data* %37, i32 0, i32 0
  %39 = load i32*, i32** %38, align 8
  %40 = load i32, i32* %5, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i32, i32* %39, i64 %41
  store i32 1, i32* %42, align 4
  %43 = load i8*, i8** %4, align 8
  %44 = load %struct.vpdma_data*, %struct.vpdma_data** %3, align 8
  %45 = getelementptr inbounds %struct.vpdma_data, %struct.vpdma_data* %44, i32 0, i32 2
  %46 = load i8**, i8*** %45, align 8
  %47 = load i32, i32* %5, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i8*, i8** %46, i64 %48
  store i8* %43, i8** %49, align 8
  br label %50

50:                                               ; preds = %35, %31
  %51 = load %struct.vpdma_data*, %struct.vpdma_data** %3, align 8
  %52 = getelementptr inbounds %struct.vpdma_data, %struct.vpdma_data* %51, i32 0, i32 1
  %53 = load i64, i64* %7, align 8
  %54 = call i32 @spin_unlock_irqrestore(i32* %52, i64 %53)
  %55 = load i32, i32* %6, align 4
  ret i32 %55
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
